2013-1-4
Bugfix: removed spurious "locking" by "not" checking malloced resources very frequently
Revised the kbest loading in learn/oracle/mert/convex_hull code

2012-12-29
INCOMPATIBLE: The bleuS metric is completely a sentence-wise metric, and document-wise scoring is performed by
	      simple averaging.
Bugfix: merge counts when large # of count files are extracted
Bugfix: better parallelization of counts extraction

2012-12-20
New: support L1 regularization for xBLEU
Bugfix: Use of a rather conventional backtracking line search strategy, not the strategy of the original LBFGS
	to avoid line-search failure

2012-12-19
New: faster MapReduce for mpi-based phrase/scfg/ghkm/tree-based extraction

2012-12-5
New: added IBM Model 4 training. Now, Model 1 -> HMM -> Model 4 training is the default.

2012-11-27
Bugfix: kbest-based (mert) learner/oracle computer core dump!
	The reason is the incorrect hash value computation for compact-feature-vector.
INCOMPATIBLE: The feature-vector is re-implemented by a privately implemented compact-hashtable.
	      Thus, the element is not "sorted" but randomly inserted in the vector.
	      The compact-hashtable is inspired by the dense-hash-map, but differ in that empty/deleted items are
	      specified by "template."
INCOMPATIBLE: phrase extraction now explicitly enumerate all the corners for lexical reordering computation
INCOMPATIBLE: lexical weights are now computed by cicada_filter_extract_{phrase,scfg,ghkm}, not during extraction
	      for flexible feature function computation. Thus, cicada-extract.py simply extract rules with counts,
	      then, cicada-index.py to add additional features and to perform indexing.
INCOMPATIBLE: Use bitvector for features which takes only binary or single values
INCOMPATIBLE: revised signature/stemmer interface and caching
New: reduced memory consumption for HMM aligner
New: added more features:# of unaligned words, # of cross for terimnals, and generative probabilities